# genlister

./: README.md  pyproject.toml
.github/workflows/: validation.yml
cnv/gm/: genliste.csv
cnv/moma/: gener.csv
fusion/: combined.csv
fusion/moma/: genliste.csv
germline/: README.md  combined.csv
germline/afmd/: afmd.csv  afmd_germline.csv
germline/gm/: gm.csv
germline/moma/: gener.csv
germline/ouh/: ouh.csv
germline/vejle/: kgVejleGermlineV3_forGithub.csv  vejle.csv
snv/gm/: genliste.csv
src/genlister/: core.py  create_combined.py  create_master_lists.py  validate.py
