[project]
name = "genlister"
version = "0.1.0"
description = "Project to organize and generate gene lists and validation across Danish genetic departments."
readme = "README.md"
authors = [
    { name = "Daniel T. Andreasen", email = "daniel@clin.au.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[project.scripts]
genlister = "genlister:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/genlister"]
